# strolb

./: .clang-format  .clangd  CMakeLists.txt  README.md  compile.bat  compile_commands.json
.cache/clangd/index/: aabb2d.h.580524D34B680A45.idx  affine-mat.h.6A55DB28B662C039.idx  affine-post.h.2E3772FEB23CB753.idx  affine-pre.h.1E23B063819F67AC.idx  affine.h.BABAEB8BAAE0A407.idx  affine.h.CAEC60D6217E3F53.idx  affine2d-post.h.2AF8B7E3988B8599.idx  affine2d.h.3D2E7CC007F714A4.idx  bezier.h.3077D05F8473A2AF.idx  box.h.286520B02A8D187A.idx  cam.h.FD5114AC6C11F3FD.idx  camera.h.E3AB38E38EA234AE.idx  cglm.h.2FC4FAC1D1610ECA.idx  color.h.B3E6122602E2137F.idx  common.h.C4BCD12DF32A8259.idx  curve.h.95047ED6DE595393.idx  ease.h.F0FB008EB5B38491.idx  euler.h.8D121F6FC69AC955.idx  euler_to_quat_rh.h.48B5A3FE179F193B.idx  frustum.h.6C7D3B871CEAF875.idx  glfw3.h.BBCEC4944FDC6902.idx  input.h.C8E7C876E49DB787.idx  intrin.h.D171993A34B780CB.idx  io.h.F15BA690D13D72F9.idx  ivec2.h.003B4D2302158DFE.idx  ivec3.h.FE71A4DD4F3D20EF.idx  ivec4.h.58F0AB7E82FD51B6.idx  main.c.5D27E9043F846496.idx  mat2.h.00E2728ABB04D90A.idx  mat2.h.8FAEF25CB2BCE9B8.idx  mat2x3.h.F91C7DDBC082225F.idx  mat2x4.h.CBEB3D4A001F5D1A.idx  (+35 more)
bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  strolb.sln  strolb.vcxproj  strolb.vcxproj.filters
include/strolb/: camera.c  camera.h  imgui.cpp  imgui.h  input.c  input.h  vector.c  vector.h  vulkan.c  vulkan.h  window.c  window.h
lib/: glfw3.lib
shaders/: vert.spv
src/: main.c
(+29 files in other folders)
